# robotvision

./: .gitignore  .gitmodules  README.md  REPRO.md  constraints.txt  copy_lol.py  dataloader.ipynb  environment.yml  index_test.pkl  index_val.pkl  indexer.py  loader-old.py  loader.py  loader1.py  loader2.py  loader4_gpudecode.py  loader6_precopy.py  loader8_nocopy_dataloader.py  preference_dataset.py  pyproject.toml  train.py
src/camera-based-e2e/models/lead_ltf/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  conda-lock.yml  environment.yml  pyproject.toml  requirements.txt
src/camera-based-e2e/models/lead_ltf/docs/: requirements.txt
src/camera-based-e2e/models/lead_ltf/docs/source/: about_datacache.md  carla_training.md  carla_typing_stubs.md  conf.py  config_system.md  cross_dataset_training.md  data_collection.md  evaluation.md  faq.md  (+12 more)
src/camera-based-e2e/models/lead_ltf/lead/: leaderboard_wrapper.py
src/camera-based-e2e/models/lead_ltf/notebooks/: carla_offline_inference.ipynb  data_format.ipynb  inspect_expert_output.ipynb  inspect_sensor_agent_io.ipynb
src/camera-based-e2e/models/lead_ltf/scripts/: build_buckets_posttrain.py  build_buckets_pretrain.py  build_cache.py  clean_carla.sh  download_one_checkpoint.sh  download_one_route.sh  eval_bench2drive.sh  eval_expert.sh  eval_expert_123d.sh  eval_longest6.sh  eval_town13.sh  main.sh  posttrain_ddp.sh  pretrain_ddp.sh  random_free_port.sh  reset_carla_world.py  setup_carla.sh  start_carla.sh  unzip_routes.sh
src/camera-based-e2e/models/lead_ltf/slurm/: config_slurm.py  evaluate.sh  evaluate_expert.sh  init.sh  train.sh
(+413 files in other folders)
